Edit code and rpz

--- a/rpz/20-analysis.tex
+++ b/rpz/20-analysis.tex
@@ -12,7 +12,7 @@
 В данной работе будут рассмотрены в частности скелетные мышцы. Каждая мышца имеют среднюю часть, способную сокращаться и называемую брюшком, и сухожильные концы, не обладающие сократимостью и служащие для прикрепления мышц.
 \begin{figure}
 	\centering
-	\includegraphics[width=0.7\linewidth]{muscle_struct}
+	\includegraphics[width=0.7\linewidth]{images/muscle_struct}
 	\caption[Строение мышцы]{Строение мышцы}
 	\label{fig:musclestruct}
 \end{figure}
@@ -22,7 +22,15 @@
 \par Значительное влияние на работу мышц оказывает направление их волокон. По этому признаку выделяют: мышцы с параллельными, поперечными и косыми волокнами. Косые в свою очередь делятся на одноперистые, если присоединяются к сухожилию с одной стороны, и двуперистые, если с двух сторон. Данные особенности в строении определяют то, насколько подвижными являются мышцы и какую силу они могут производить.
 \par При сокращении центральная нервная система подаёт сигнал в мышцы, в результате которого нити саркомеров скользят друг вокруг друга, что приводит к укорачиванию саркомера~\cite{muscle_03}. Скольжение нитей вызывает мышечное напряжение, что является основным вкладом саркомера, так как именно это действие даёт мышцам их физическую силу. 
 \par Задачей программы является представление визуальной модели мышц, которая позволила бы наблюдать за процессом их сокращения, благодаря чему было бы проще изучить их строение и основные принципы работы.
+\par Следует отметить, что существуют приложения, позволяющие изучать строение мышц. Некоторые из них также моделируют внутренние органы, однако в них возможно наблюдать только мышцы только в статическом положении. Это отличает эти приложения от разрабатываемого мной, которое позволит изучать процесс сокращения.
+ \begin{figure}[h]
+ 	\centering
+ 	\includegraphics[width=0.3\linewidth]{images/ex1}\quad\includegraphics[width=0.3\linewidth]{images/ex2}\includegraphics[width=0.3\linewidth]{images/ex3}
+ 	\caption{Примеры анатомических атласов}
+ 	\label{fig:ex1}
+ \end{figure} 
 
+\newpage
 \section{Способы моделирования мышечных сокращений}
 \label{sec:muscle_meth}
 Существуют различные способы представления мышечных сокращений. В зависимости от принципов, лежащих в основе каждого из методов, их можно разделить на: геометрически-основанные и физически-основанные~\cite{diff_methods}. В геометрически-основанных подходах большее внимание уделяется анимации расширения и укорачивания, в то время как физический аспект сокращения не учитывается. Они успешно моделируют простые мышцы, но им недостаёт реализма в физиологическом или биомеханическом аспектах. В противовес к таким подходам ставятся физически-обоснованные подходы, в которых рассматриваются сложные проблемы, включающие в себя динамику мышц и свойства тканей. Чтобы смоделировать физически-корректную модель мышц решают две проблемы: определение силы сокращения и представление изменения мышечной геометрии.
@@ -71,7 +79,7 @@ M\ddot{u}+C\dot{u}+Ku=R(t)
 \subsection{Метод конечных объёмов}
 \label{subsec:FVM}
 Аналогично предыдущему методу метод конечных объёмов разбивает модель на множество элементов. Однако для расчёта прилагаемых сил объёмные интегралы трансформируют в интегралы по площади, используя формулу Гаусса-Остроградского. Эти условия затем расцениваются как потоки на поверхности каждого конечного объёма. Эта модель используется для представления деформации скелетных мышц, и считается, что она более производительна и обладает меньшим потреблением памяти, чем метод конечных элементов~\cite{teran}.
-\paragraph{Вывод} было решено использовать обобщённую цилиндрическую модель для аппроксимации мышц, так как она позволит 
+\paragraph{Вывод} было решено использовать модель, использующую деформируемые эллипсоиды для аппроксимации мышцы, так как она позволяет визуализировать мышцы различных форм и размеров, учитывая изометрическое сокращение мышц.
 
 \section{Выбор методов моделирования}
 \label{sec:model_meth}
@@ -101,7 +109,7 @@ M\ddot{u}+C\dot{u}+Ku=R(t)
 	\item значительные затраты памяти ограничивают разрешающую способность, точность моделирования;
 	\item при увеличении или уменьшении изображения возникают проблемы, например при увеличении ухудшается разрешающая способность.
 \end{itemize}
-\paragraph{Вывод:} выбирая между методами моделирования, было решено использовать полигональный, так как он является более экономичным по памяти, чем воксели. Кроме того, они такое представление позволяет легко изменять форму модели, что положительно влияет на производительность, при анимации сокращения мышц. 
+\paragraph{Вывод:} выбирая между методами моделирования, было решено использовать полигональный, так как он является более экономичным по памяти, чем воксели. Кроме того, такое представление позволяет легко изменять форму модели, что положительно влияет на производительность, при анимации сокращения мышц. 
 
 \section{Выбор метода морфинга}
 \label{sec:morph}
@@ -110,11 +118,11 @@ M\ddot{u}+C\dot{u}+Ku=R(t)
 	\item промежуточные формы не зависят от точки обзора и свойств освещения;
 	\item двумерным техникам не достаёт информации о пространственной конфигурации модели, в связи с чем они не могут корректно обрабатывать изменения в освещении и видимости~\cite{volume_morph}.
 \end{itemize}
-Трёхмерные техники могут применяться моделям, заданным объёмами или гранично описанным - мешами. Меш $M$ можно описать парой $(K, V)$, где $K$ - это набор, отображающий связь вершин, рёбер и граней и $V = (v_{1},\dots,v_{n})$ - описывает геометрическое положение вершин в $R^{d}$~\cite{alexa}. Обычно, морфинг применяются к двум заданным мешам $M_{0}=(K_{0},V_{0})$ и $M_{1}=(K_{1},V_{1})$. Целью является построение группы мешей $M(t)=(K,V(t)),t\in[0,1]$, генерация ее обычно выполняется за три последовательных шага~\cite{alexa}:
-\begin{enumerate}
+Трёхмерные техники могут применяться к моделям, заданным объёмами или гранично описанными -- мешами. Меш $M$ можно описать парой $(K, V)$, где $K$ -- это набор, отображающий связь вершин, рёбер и граней и $V = (v_{1},\dots,v_{n})$ -- описывает геометрическое положение вершин в $R^{d}$~\cite{alexa}. Обычно, морфинг применяются к двум заданным мешам $M_{0}=(K_{0},V_{0})$ и $M_{1}=(K_{1},V_{1})$. Целью является построение группы мешей $M(t)=(K,V(t)),t\in[0,1]$, генерация ее обычно выполняется за три последовательных шага~\cite{alexa}:
+\begin{enumerate}[1.]
 	\item Поиск соответствия между мешами. А именно сопоставление вершин, лежащих в исходной фигуре, с вершинами целевой фигуры.
-	\item Формирование новой, последовательной связности $K$ для каждого вершины на основе геометрических позиций $V(0), V(1)$. Традиционный подход к этой проблеме заключается в создании надмножества $K_{0}$ и $K_{1}$. Однако, в некоторых случаях ремешинг может быть полезен в случае, когда исходные меши обладают разными разрешениями.
-	\item Создание путей $V(t),t\in]0,1[$ для вершин. Данный шан обладает некоторыми ограничениям: в большинстве случаев не ожидается, что форма будет разрушаться или самопересекаться, и, как правило, ожидается, что пути будут гладкими. Самый простой способ, получить такие пути - это линейная интерполяция координат вершин. При заданном параметре $t$ координаты интерполированной формы вычисляются как:
+	\item Формирование новой, последовательной связности $K$ для каждой вершины на основе геометрических позиций $V(0), V(1)$. Традиционный подход к этой проблеме заключается в создании надмножества $K_{0}$ и $K_{1}$. Однако, в некоторых случаях ремешинг может быть полезен в случае, когда исходные меши обладают разными разрешениями.
+	\item Создание путей $V(t),t\in]0,1[$ для вершин. Данный шаг обладает некоторыми ограничениям: в большинстве случаев не ожидается, что форма будет разрушаться или самопересекаться, и, как правило, ожидается, что пути будут гладкими. Самый простой способ, получить такие пути - это линейная интерполяция координат вершин. При заданном параметре $t$ координаты интерполированной формы вычисляются как:
 	\begin{equation}
 	V(t)=(1-t)V(0)+tV(1)
 	\end{equation}
@@ -134,7 +142,7 @@ M\ddot{u}+C\dot{u}+Ku=R(t)
 	\item Искривление - S и T искривляются, чтобы получить объёмы S' и T'. Для этого могут задаваться пары элементов, один элемент из исходного и один в результирующим объёмах. Необходимо задать несколько таких пар, которые определят общее соответствие между двумя объектами. Эти пары объектов взаимодействуют как магниты, формирующие податливые объёмы~\cite{volume_morph}.
 	\item Смешивание может выполняться перекрёстным растворением объёмов или же их двумерных изображений. Под смешиванием объемов подразумевается интерполяция вокселей, из которых они состоят.
 \end{itemize}
-\paragraph{Вывод:} было решено использовать трёхмерный морфинг на основе мешей с использованием метода сортировки рёбер для установления соответствий, что также связано с ранее выбранным методом полигонального представления модели, так как это позволит получить плавную анимацию с учётом освещения и видимости. Кроме того, этот метод даст хорошие результаты, поскольку форма мышц при сокращении не слишком сильно изменяется.
+\paragraph{Вывод:} было решено использовать трёхмерный морфинг на основе мешей, что связано с ранее выбранным методом полигонального представления модели, так как это позволит получить плавную анимацию с учётом освещения и видимости. Кроме того, этот метод даст хорошие результаты, поскольку форма мышц при сокращении не слишком сильно изменяется.
 
 \section{Анализ методов удаления невидимых граней}
 \label{sec:inv_edge}
@@ -176,6 +184,15 @@ I = I_{a}k_{a} + I_{l}k_{d}\cos \theta \qquad 0\leq\theta\leq\pi/2
 
 \paragraph{Метод Фонга} требует больших вычислительных затрат, чем закраска по Гуро. Идея такой закраски заключается в интерполировании вектора нормали вдоль сканирующей строки, который затем используется в модели освещения для расчёта интенсивности.
 
-\paragraph{Вывод:} выбирая между методами закраски было решено использовать метод Гуро, который позволяет получить результат лучше, чем метод простой закраски, и быстрее, чем метод Фонга. Кроме того, в результате закраски методом Гуро ребра будут выглядеть плавными, что является преимуществом для модели мышц.
+\paragraph{Вывод:} выбирая между методами закраски было решено использовать метод простой закраски, который является, самым быстрым из представленных, что позволит отображать анимацию более плавно.
 
-\label{sec:color}
+\section{Вывод}
+\label{sec:conc_analysis}
+В данном разделе была рассмотрена предметная область, аналоги разрабатываемому приложению, основные алгоритмы, необходимые для создания реалистичного изображения визуализации мышечных сокращений. Из них были выбраны:
+\begin{itemize}
+	\item использование деформируемых эллипсоидов для аппроксимации мышц;
+	\item полигональный метод моделирования;
+	\item трёхмерный морфинг на основе мешей;
+	\item алгоритм Z-буфера для удаления невидимых граней;
+	\item простая модель освещения.
+\end{itemize}
