--- a/rpz/30-design.tex
+++ b/rpz/30-design.tex
@@ -4,50 +4,64 @@
 Программа должна предоставлять возможность:
 \begin{itemize}
 	\item загружать модель мышц;
+	\item вращать и перемещать загруженную модель;
 	\item визуализировать мышечные сокращения;
 	\item задавать степень сокращения;
-	\item изменять параметры загруженной модели;
+	\item добавлять и перемещать источники освещения.
 \end{itemize}
+
 \section{Общий алгоритм работы программы}
 \label{sec:general}
-Ниже приведён перечень основных этапов работы программы.
-\begin{enumerate}
-	\item Ожидание нажатия пользователем кнопки загрузки новой мышцы.
-	\item Загрузка трёхмерной модели из файла.
-	\item Задание пользователем параметров мышцы, а также степени её сокращения.
-	\item Добавление модели в массив отображаемых объектов:
-	\item Для всех полигонов модели:
-	\begin{enumerate}
-		\item Для каждого полигона: перевести в экранные координаты, вычислить интенсивность и глубину каждого пикселя, 
-	\end{enumerate}
-	\item Ожидание нажатия кнопки показа анимации сокращения.
-	\item Построение анимации:
-	\begin{enumerate}
-		\item Формирование конечной модели на основе параметров мышцы.
-		\item Установление соответствия между вершинами полигонов начального и конечного состояний.
-		\item Интерполяция пути каждой вершины.
-		\item Визуализировать каждое промежуточное состояние.
-	\end{enumerate}
-\end{enumerate}
 На рисунках \ref{fig:01a-0} и \ref{fig:02a0} приведены IDEF0 диаграммы, представляющие организацию работы программы.
-\begin{figure}
+\begin{figure}[H]
 	\centering
-	\includegraphics[width=\linewidth, angle=90]{01_A-0}
+	\includegraphics[height=0.5\paperheight, angle=90]{images/01_A-0}
 	\caption[IDEF0 диаграмма, блок А0]{IDEF0 диаграмма, блок А0}
 	\label{fig:01a-0}
 \end{figure}
-\begin{figure}
+\begin{figure}[H]
 	\centering
-	\includegraphics[width=0.7\linewidth]{02_A0}
-	\caption[IDEF0 диаграмма, подробности работы блока А0]{IDEF0 диаграмма, подробности работы блока А0}
+	\includegraphics[height=0.5\paperheight, angle=90]{images/02_A0}
+	\caption[Последовательность действий для отображения анимации сокращения мышцы]{Последовательность действий для отображения анимации сокращения мышцы}
 	\label{fig:02a0}
 \end{figure}
 
 \section{Реализуемые алгоритмы алгоритмы}
 \label{sec:algs}
+\paragraph{Модель скелетных мышц}
+В качестве модели аппроксимации скелетных мышц было решено использовать деформируемые эллипсоиды \cite{scheepers97}. Для представления сокращения параметры эллипсоида задаются с помощью математических уравнений, что позволяет сохранять объем и соотношение между высотой и шириной мышцы. Объем рассчитывается по формуле:
+\begin{equation}
+	v = \frac{4\pi abc}{3}
+\end{equation}
+Полагая $l'$ новой длиной мышцы, $r=\frac{a}{b}$, то 
+\begin{equation}
+	c'=\frac{l'}{2}
+\end{equation}
+\begin{equation}
+	b'=\sqrt{\frac{3v}{4\pi rc'}}
+\end{equation}
+\begin{equation}
+	a'=b'r
+\end{equation}
+Для визуализации изометрического сокращения мышцы соотношения r пересчитывается по формуле:
+\begin{equation}
+	r=(1-t+kt)r_n
+\end{equation}
+где $r_n$--соотношение $\frac{a}{b}$ в расслабленном состоянии, $t$--степень напряжённости $t\in [0,1]$, $k$--параметр контроля напряжения, который регулирует степень сжатия.
+
+\par Поскольку в качестве метода моделирования полигональный, в связи с чем появляется необходимость в триангуляции эллипсоида. Алгоритм, представляющий эллипсоид, описанный его параметрами, можно описать следующими шагами:
+\begin{enumerate}[1.]
+	\item Построить куб в начале координат.
+	\item Представить его в виде треугольных полигонов.
+	\item Каждый полигон разбить на 4 других полигона.
+	\item Нормализовать каждую вершину.
+	\item К полученной сфере применить преобразования, умножив координаты точек на параметры эллипсоида.
+\end{enumerate}
+Шаг 3 можно выполнять рекурсивно произвольное количество раз, что приведёт к увеличению числа полигонов. Большая глубина рекурсии позволит сделать изображение более реалистичным, однако увеличит время необходимое на обработку изображения. В результате выполнения алгоритма мы получим эллипсоид, расположенный в начале координат.
+
 \paragraph{Алгоритм z-буфера}
 в общем виде может быть описан последовательностью таких шагов:
-\begin{enumerate}
+\begin{enumerate}[1.]
 	\item Заполнить буфер кадра фоновым значением интенсивности или цвета.
 	\item Заполнить z-буфер минимальным значением z.
 	\item Преобразовать каждый многоугольник в растровую форму в произвольном порядке:
@@ -63,16 +77,14 @@ I = I_{a}k_{a} + I_{l}k_{d}\cos \theta \qquad 0\leq\theta\leq\pi/2
 \end{equation}
 $I$ - интенсивность отражённого света, $I_{i}$ - интенсивность точечного источника, $k_{d}$ - коэффициент диффузного отражения ($0\leq k_{d}\leq 1$), $\theta$ - угол между направлением света и нормалью к поверхности, $I_{a}$ - интенсивность рассеянного света, $k_{a}$ - коэффициент диффузного отражения ($0\leq k_{a}\leq 1$).
 
-\paragraph{Закраска методом Гуро} интенсивность в точке определяется линейной интерполяцией интенсивности в точках пересечения сканирующей строки с рёбрами треугольника. Чтобы получить значение в этих точках необходимо интерполировать интенсивность в вершинах, соединяемых этими рёбрами:
-\begin{equation}
-I_{inter}=uI_{A}+(1-u)I_{B} \qquad 0\leq u \leq 1
-\end{equation}
-где u - отношение расстояний от точки пересечения до вершин.
-
-\paragraph{Морфинг меша} можно разделить на два этапа: установление соответствия между полигонами начального и конечного состояний модели и интерполяция положения вершин. На рисунке \ref{fig:morphingalg} представлен алгоритм морфинга мешей с методом сортировки рёбер для установления соответствия между рёбрами.
-\begin{figure}
+\paragraph{Морфинг меша} можно разделить на два этапа: установление соответствия между полигонами начального и конечного состояний модели и интерполяция положения вершин. На рисунке \ref{fig:morphingalg} представлен алгоритм морфинга мешей, следует отметить что для установления связи между полигонами начала и конца не производится никаких вычислений, а каждому i-ому полигону начала в соответствие ставится i-ый полигон конца, это связано с тем, что объект источника и объект цели имеют одинаковую форму и одинаковое количество полигонов, в связи с чем предполагается, что для того, чтобы не нарушить целостность объекта необходимо сопоставить их в том же порядке.
+\begin{figure}[H]
 	\centering
-	\includegraphics[width=0.7\linewidth]{morph}
+	\includegraphics[width=0.7\linewidth]{images/morphing_alg}
 	\caption[Алгоритм морфинга]{Алгоритм морфинга}
 	\label{fig:morphingalg}
 \end{figure}
+
+\section{Вывод}
+\label{sec:conc_constr}
+В этом разделе были рассмотрены требования к программе, общий алгоритм ее работы, представлены схемы для реализации выбранных алгоритмов и математические формулы.
